--- a/SEGUNDO BIMESTRE/Cadastro livros/Prj_Cadastro.dproj
+++ b/SEGUNDO BIMESTRE/Cadastro livros/Prj_Cadastro.dproj
@@ -84,6 +84,8 @@
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <VerInfo_Locale>1033</VerInfo_Locale>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -98,8 +100,8 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="Frm_Cadastro.pas">
-            <Form>Form1</Form>
+        <DCCReference Include="Frm_Cadastro_livros.pas">
+            <Form>Frm_Cad</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="uDM_cadastro_livros.pas">
@@ -107,12 +109,16 @@
             <FormType>dfm</FormType>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
-        <DCCReference Include="Frm_Inclusao.pas">
-            <Form>Frm_Incluir</Form>
+        <DCCReference Include="Frm_Menu.pas">
+            <Form>Frm_Men</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="Frm_Cadastro_Editora.pas">
-            <Form>Form2</Form>
+        <DCCReference Include="Frm_Cadastro_editora.pas">
+            <Form>Frm_cadastro_edt</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="Frm_Cadastro_clientes.pas">
+            <Form>Frm_Cli</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Base">
@@ -135,6 +141,12 @@
                 <Source>
                     <Source Name="MainSource">Prj_Cadastro.dpr</Source>
                 </Source>
+                <Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\bcboffice2k280.bpl">Embarcadero C++Builder Office 2000 Servers Package</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\bcbofficexp280.bpl">Embarcadero C++Builder Office XP Servers Package</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k280.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp280.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+                </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="4">
                 <DeployFile LocalName="Win32\Debug\Prj_Cadastro.exe" Configuration="Debug" Class="ProjectOutput">
